feat: add billable default inheritance
